--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild":"rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -51,6 +52,7 @@
     "pg": "^8.11.3",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.14",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
     "typeorm": "^0.3.17",
