mobilePhone Number Validation Second

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "google-libphonenumber": "^3.2.34",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
@@ -67,6 +68,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.10",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.10.7",
     "@types/socket.io": "^3.0.2",
