AWS s3  - upload multi files & del files

--- a/.env.dev
+++ b/.env.dev
@@ -7,5 +7,7 @@ DB_NAME=NestJS_BackendDev
 JWT_SECRET=0bVoAzPLOmS1StzMkDzwjqrl1yTNWQwi
 JWT_EXPIRATION_TIME=30
 
+
+BUCKET_NAME=goodganglabs3
 AWS_ACCESS_KEY=AKIAVXZM3DPMLTBQKKHD
 AWS_ACCESS_SECRET_KEY=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
