--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.609.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
@@ -38,6 +39,7 @@
     "@socket.io/redis-adapter": "^8.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "amazon-s3-uri": "^0.1.1",
     "apollo-server-core": "^3.13.0",
     "aws-sdk": "^2.1532.0",
     "bcrypt": "^5.1.1",
@@ -72,6 +74,7 @@
     "@types/express-session": "^1.17.10",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.7",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
