--- a/.env.dev
+++ b/.env.dev
@@ -7,7 +7,10 @@ DB_NAME=NestJS_BackendDev
 JWT_SECRET=0bVoAzPLOmS1StzMkDzwjqrl1yTNWQwi
 JWT_EXPIRATION_TIME=30
 
+#nestUpload
+
+#trader IAM 사용자
 
 BUCKET_NAME=goodganglabs3
-AWS_ACCESS_KEY=AKIAVXZM3DPMLTBQKKHD
-AWS_ACCESS_SECRET_KEY=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
+AWS_ACCESS_KEY=AKIAVXZM3DPMK5PNIGKN
+AWS_ACCESS_SECRET_KEY=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
