--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#environment
+.env.dev
+
 # compiled output
 /dist
 /node_modules
@@ -33,3 +36,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
