--- a/.env.dev
+++ b/.env.dev
@@ -11,3 +11,5 @@ JWT_EXPIRATION_TIME=30
 BUCKET_NAME=goodganglabs3
 AWS_ACCESS_KEY=AKIAVXZM3DPMK5PNIGKN
 AWS_ACCESS_SECRET_KEY=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
+
+#.ignore test... 7.5 12:03
