--- a/.env.dev
+++ b/.env.dev
@@ -15,6 +15,6 @@ JWT_SECRET=0bVoAzPLOmS1StzMkDzwjqrl1yTNWQwi
 JWT_EXPIRATION_TIME=30
 
 #trader
-BUCKET_NAME=goodganglabs3
-AWS_ACCESS_KEY=AKIAVXZM3DPMK5PNIGKN
-AWS_ACCESS_SECRET_KEY=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
+#BUCKET_NAME=goodganglabs3
+#AWS_ACCESS_KEY=AKIAVXZM3DPMK5PNIGKN
+#AWS_ACCESS_SECRET_KEY=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
